--- a/calculator.html
+++ b/calculator.html
@@ -1,21 +1,56 @@
 <html>
 <head>
 	<title>Calculator</title>
-	<script type="text/javascript" src="calculatorScript.js">
-	</script>
+	<script type="text/javascript" src="calculatorScript.js"></script>
 </head>
 <body>
 	<h1>Calculator</h1>
 	<table height="500" width="400" border="2px">
-		<tr height="100">
-			<div>
-				<td></td>
-			</div>
-		</tr>
 		<tr>
-			<div>
-				<td></td>
-			</div>
+			<td>
+				<table bgcolor="yellow" height="100" width="406">
+					<tr>
+						<td>
+						</td>
+					</tr>
+				</table>
+				<table height="400" width="400">
+					<tr>
+						<td>
+							<table bgcolor="green" height="400" width="300">
+								<tr>
+									<td><input type="button" value="1"style="height:50px; width:50px"></td>
+									<td><input type="button" value="2"style="height:50px; width:50px"></td>
+									<td><input type="button" value="3"style="height:50px; width:50px"></td>
+								</tr>
+								<tr>
+									<td><input type="button" value="4"style="height:50px; width:50px"></td>
+									<td><input type="button" value="5"style="height:50px; width:50px"></td>
+									<td><input type="button" value="6"style="height:50px; width:50px"></td>
+								</tr>
+								<tr>
+									<td><input type="button" value="7"style="height:50px; width:50px"></td>
+									<td><input type="button" value="8"style="height:50px; width:50px"></td>
+									<td><input type="button" value="9"style="height:50px; width:50px"></td>
+								</tr>
+								<tr>
+									<td><input type="button" value="."style="height:50px; width:50px"></td>
+									<td><input type="button" value="0"style="height:50px; width:50px"></td>
+									<td><input type="button" value="="style="height:50px; width:50px"></td>
+								</tr>
+							</table>
+						</td>
+						<td>
+							<table bgcolor="red" height="400" width="100">
+								<tr><td><input type="button" value="+"style="height:40px; width:60px"></td></tr>
+								<tr><td><input type="button" value="-"style="height:40px; width:60px"></td></tr>
+								<tr><td><input type="button" value="*"style="height:40px; width:60px"></td></tr>
+								<tr><td><input type="button" value="/"style="height:40px; width:60px"></td></tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+			</td>
 		</tr>
 	</table>
 </body>
