alignment modified for buttons

--- a/calculator.html
+++ b/calculator.html
@@ -12,15 +12,16 @@
 				<table id="screen">
 					<tr>
 						<td>
+							<p>12345</p>
 						</td>
 					</tr>
 				</table>
 				<table id="keypadBody">
 					<tr>
 						<td>
-							<table id="numericKeypad">
+							<table class="centralAlign" id="numericKeypad">
 								<tr>
-									<td><input class="numericButton" type="button" value="1"></td>
+									<td ><input class="numericButton" type="button" value="1"></td>
 									<td><input class="numericButton" type="button" value="2"></td>
 									<td><input class="numericButton" type="button" value="3"></td>
 								</tr>
@@ -42,7 +43,7 @@
 							</table>
 						</td>
 						<td>
-							<table id="opratorKeypad">
+							<table class="centralAlign" id="opratorKeypad">
 								<tr><td><input class="opratorButton" type="button" value="+"></td></tr>
 								<tr><td><input class="opratorButton" type="button" value="-"></td></tr>
 								<tr><td><input class="opratorButton" type="button" value="*"></td></tr>
