added clear and del from left button

--- a/calc.html
+++ b/calc.html
@@ -8,6 +8,10 @@
 	<div class ="box">
 		<div class ="display"><input type="text" readonly id="disp"></div>
 		<div class ="keys">
+			<p><input type="button" value="00" onclick='screen("00")'>
+				<input type="button" value="<-" onclick='del_left()'>	
+				<input type="button" value="C" onclick='showResult("")'>
+				<input type="button" value="%" onclick='screen("%")'></p>
 			<p><input type="button" value="1" onclick='screen("1")'>
 				<input type="button" value="2" onclick='screen("2")'>	
 				<input type="button" value="3" onclick='screen("3")'>
