--- a/calc.html
+++ b/calc.html
@@ -7,27 +7,27 @@
 <body>
 	<div class ="box">
 		<div class ="display"><input type="text" readonly id="disp"></div>
-		<div class ="keys">
-			<p><input type="button" value="00" onclick='screen("00")'>
-				<input type="button" value="<-" onclick='del_left()'>	
-				<input type="button" value="C" onclick='showResult("")'>
-				<input type="button" value="%" onclick='screen("%")'></p>
-			<p><input type="button" value="1" onclick='screen("1")'>
-				<input type="button" value="2" onclick='screen("2")'>	
-				<input type="button" value="3" onclick='screen("3")'>
-				<input type="button" value="*" onclick='screen("*")'></p>
-			<p><input type="button" value="4" onclick='screen("4")'>
-				<input type="button" value="5" onclick='screen("5")'>	
-				<input type="button" value="6" onclick='screen("6")'>
-				<input type="button" value="+" onclick='screen("+")'></p>
-			<p><input type="button" value="7" onclick='screen("7")'>
-				<input type="button" value="8" onclick='screen("8")'>	
-				<input type="button" value="9" onclick='screen("9")'>
-				<input type="button" value="-" onclick='screen("-")'></p>
-			<p><input type="button" value="." onclick='screen(".")'>
-				<input type="button" value="0" onclick='screen("0")'>	
-				<input type="button" value="=" onclick='calculate("2")'>
-				<input type="button" value="/" onclick='screen("/")'></p>
+		<div class ="keypad">
+			<p><input type="button" class="button" value="00" onclick='screen("00")'>
+				<input type="button" class="button" value="<-" onclick='del_left()'>	
+				<input type="button" class="button" value="C" onclick='showResult("")'>
+				<input type="button" class="button" value="%" onclick='screen("%")'></p>
+			<p><input type="button" class="button" value="1" onclick='screen("1")'>
+				<input type="button" class="button" value="2" onclick='screen("2")'>	
+				<input type="button" class="button" value="3" onclick='screen("3")'>
+				<input type="button" class="button" value="*" onclick='screen("*")'></p>
+			<p><input type="button" class="button" value="4" onclick='screen("4")'>
+				<input type="button" class="button" value="5" onclick='screen("5")'>	
+				<input type="button" class="button" value="6" onclick='screen("6")'>
+				<input type="button" class="button" value="+" onclick='screen("+")'></p>
+			<p><input type="button" class="button" value="7" onclick='screen("7")'>
+				<input type="button" class="button" value="8" onclick='screen("8")'>	
+				<input type="button" class="button" value="9" onclick='screen("9")'>
+				<input type="button" class="button" value="-" onclick='screen("-")'></p>
+			<p><input type="button" class="button" value="." onclick='screen(".")'>
+				<input type="button" class="button" value="0" onclick='screen("0")'>	
+				<input type="button" class="button" value="=" onclick='calculate("2")'>
+				<input type="button" class="button" value="/" onclick='screen("/")'></p>
 		</div>
 	</div>
 </body>
